# obscopilot

./: .gitignore  CONTRIBUTING.md  README.md  TASKS.md  __init__.py  app.py  build.py  config.py  encode_credentials.py  install.py  main.py  obscontrol.py  obscopilot.py  package.py  pytest.ini  requirements.txt  run.py  setup.cfg  setup.py  setup_embedded_venv.py  twitchintegration.py
.github/workflows/: build.yml
alembic/versions/: 04_stream_health.py
docs/: CREDENTIALS.md  README.md  api_reference.md  developer_guide.md
installer/: build_installers.py
obscopilot/: __init__.py  main.py
obscopilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
obscopilot/ai/: googleai.py  openai.py  rate_limiter.py  templates.py
obscopilot/core/: config.py  events.py  updater.py
obscopilot/obs/: client.py  stream_health.py
obscopilot/storage/: __init__.py  database.py  models.py  repositories.py  schema.py
obscopilot/twitch/: auth.py  client.py  commands.py  viewer_stats.py
obscopilot/ui/: __init__.py  app.py  commands_tab.py  dashboard.py  dashboard_customizer.py  main.py  main_window.py  simple.py  template_dialog.py  theme_customizer.py  themes.py  viewer_stats_tab.py  visual_workflow_builder.py  workflow_editor.py
obscopilot/workflows/: engine.py  models.py  persistence.py  template_manager.py
services/: __init__.py  obs_websocket.py  settings_manager.py
services/twitch/: __init__.py  auth.py  credentials.py
settings/: .keyring.json  settings.json
templates/: README.md
templates/workflows/: channel_points_reward.json  new_follower_alert.json  raid_welcome.json  stream_start_automation.json  subscriber_alert.json
tests/: __init__.py  mock_obsws_server.py  test_core.py  test_main_window.py  test_obs_websocket.py  test_settings_controller.py  test_settings_tab.py  test_workflows.py
tests/e2e/: __init__.py  conftest.py  test_application_startup.py  test_obs_integration.py  test_theme_customization.py  test_workflow_ui.py
tests/integration/: test_workflow_integration.py
tests/ui/: test_theme_customizer.py  test_themes.py  test_visual_workflow_builder.py  test_workflow_editor.py
tests/unit/: test_template_manager.py
ui/: __init__.py  main_window.py  settings.py
ui/tabs/: __init__.py  settings_controller.py  settings_tab.py
ui/twitch/: login.py
(+22 files in other folders)
